force-app/main/default/objects/Apttus_Approval__Approval_Request_History__c/Apttus_Approval__Approval_Request_History__c.object-meta.xml
<CustomObject>
    <description>Designates history for an approval request created from an approval process</description>
    <label>Approval Request History</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Request History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>