force-app/main/default/objects/Apttus_Approval__Approval_Request_History__c/fields/Apttus_Approval__Action__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Action__c</fullName>
    <formula>IF(AND(OR(ISPICKVAL(Apttus_Approval__Approval_Status__c,&quot;Assigned&quot;),ISPICKVAL(Apttus_Approval__Approval_Status__c,&quot;Reassigned&quot;)),OR(OwnerId=$User.Id,Apttus_Approval__PrevAssignedToId__c=$User.Id,Apttus_Approval__DelegateApprover__c=$User.Id,$Profile.Name=&quot;System Administrator&quot;,$Profile.Name=&quot;Apttus Standard User&quot;)),HYPERLINK(&quot;/apex/Apttus_Approval__ApprovalSummaryLaunch?id=&quot;&amp;Id&amp;&quot;&amp;pageMode=reassign&quot;,&quot;Reassign&quot;&amp;BR(),&quot;_top&quot;),NULL)
&amp;
IF(AND(OR(ISPICKVAL(Apttus_Approval__Approval_Status__c,&quot;Assigned&quot;),ISPICKVAL(Apttus_Approval__Approval_Status__c,&quot;Reassigned&quot;)),OR(OwnerId=$User.Id,Apttus_Approval__PrevAssignedToId__c=$User.Id,Apttus_Approval__DelegateApprover__c=$User.Id,$Profile.Name=&quot;System Administrator&quot;,$Profile.Name=&quot;Apttus Standard User&quot;)),HYPERLINK(&quot;/apex/Apttus_Approval__ApprovalSummaryLaunch?id=&quot;&amp;Id&amp;&quot;&amp;pageMode=approveReject&quot;,&quot;Approve / Reject&quot;&amp;BR(),&quot;_top&quot;),NULL)
&amp;
IF(OR(ISPICKVAL(Apttus_Approval__Approval_Status__c,&quot;Assigned&quot;),ISPICKVAL(Apttus_Approval__Approval_Status__c,&quot;Reassigned&quot;)),HYPERLINK(&quot;/apex/Apttus_Approval__ApprovalSummaryLaunch?id=&quot;&amp;Id&amp;&quot;&amp;pageMode=addComment&quot;,&quot;Add Comment&quot;&amp;BR(),&quot;_top&quot;),NULL)
&amp;
IF(AND(Apttus_Approval__CanEscalate__c,OR(ISPICKVAL(Apttus_Approval__Approval_Status__c,&quot;Assigned&quot;),ISPICKVAL(Apttus_Approval__Approval_Status__c ,&quot;Reassigned&quot;)),OR(Apttus_Approval__Initial_Submitter__c=$User.Id,$Profile.Name=&quot;System Administrator&quot;)),HYPERLINK(&quot;/apex/Apttus_Approval__ApprovalRequestEscalate?id=&quot;&amp;Id,&quot;Escalate&quot;,&quot;_top&quot;),NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Action</label>
    <type>Text</type>
</CustomField>