force-app/main/default/objects/Apttus_Approval__Approval_Request_History__c/fields/Apttus_Approval__Actual_Approver__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Actual_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Actual Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Actual Approver History</relationshipLabel>
    <relationshipName>Actual_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>