force-app/main/default/objects/Apttus_Approval__Approval_Request_History__c/fields/Apttus_Approval__AgreementLineItemId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__AgreementLineItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated agreement line item</description>
    <inlineHelpText>ID of the associated agreement line item</inlineHelpText>
    <label>Related Agreement Line Item</label>
    <referenceTo>Apttus__AgreementLineItem__c</referenceTo>
    <relationshipLabel>Approval Request History</relationshipLabel>
    <relationshipName>ApprovalRequestHistory</relationshipName>
    <type>Lookup</type>
</CustomField>