force-app/main/default/objects/Apttus_Approval__Approval_Request_History__c/fields/Apttus_Approval__Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reassigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Assigned To History</relationshipLabel>
    <relationshipName>Assigned_To</relationshipName>
    <type>Lookup</type>
</CustomField>