force-app/main/default/objects/Apttus_Approval__Approval_Request_History__c/fields/Apttus_Approval__Assigned_To_Id__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Assigned_To_Id__c</fullName>
    <label>Assigned To Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>