force-app/main/default/objects/Apttus_Approval__Approval_Request_History__c/fields/Apttus_Approval__Assigned_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Assigned_To_Name__c</fullName>
    <label>Assigned To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>