force-app/main/default/objects/Apttus_Approval__Approval_Request_History__c/fields/Apttus_Approval__Auto_Complete__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Auto_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the step was auto completed</description>
    <label>Auto Complete</label>
    <type>Checkbox</type>
</CustomField>