force-app/main/default/objects/Apttus_Approval__Approval_Request_History__c/fields/Apttus_Approval__CarbonCopyAssigneeIds__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__CarbonCopyAssigneeIds__c</fullName>
    <description>Contains a list of user ids that should receive carbon copy notifications along with assigned approvers for a given request.</description>
    <inlineHelpText>Contains a list of user ids that should receive carbon copy notifications along with assigned approvers for a given request.</inlineHelpText>
    <label>Carbon Copy Assignee Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>