force-app/main/default/objects/Apttus_Approval__Approval_Request_History__c/fields/Apttus_Approval__ChildObjectLink__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ChildObjectLink__c</fullName>
    <description>The link to the child object</description>
    <formula>HYPERLINK(Apttus_Approval__ChildObjectId__c , &quot;View &quot; &amp; Apttus_Approval__ChildObjectType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The link to the child object</inlineHelpText>
    <label>Child Object Link</label>
    <type>Text</type>
</CustomField>