force-app/main/default/objects/Apttus_Approval__Approval_Request_History__c/fields/Apttus_Approval__ChildObjectName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ChildObjectName__c</fullName>
    <description>The child object name</description>
    <inlineHelpText>The child object name</inlineHelpText>
    <label>Child Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>