force-app/main/default/objects/Apttus_Approval__Approval_Request_History__c/fields/Apttus_Approval__ChildObjectRefId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ChildObjectRefId__c</fullName>
    <description>ID of the child object associated with the request</description>
    <externalId>true</externalId>
    <inlineHelpText>ID of the child object associated with the request</inlineHelpText>
    <label>Child Object Reference Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>