force-app/main/default/objects/Apttus_Approval__Approval_Request_History__c/fields/Apttus_Approval__ContinuePolicyApprovalOnAReject__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ContinuePolicyApprovalOnAReject__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Continue with policy approval even when a step is rejected.</description>
    <inlineHelpText>Continue with policy approval even when a step is rejected.</inlineHelpText>
    <label>Continue Policy Approval on a Reject?</label>
    <type>Checkbox</type>
</CustomField>