force-app/main/default/objects/Apttus_Approval__Approval_Request_History__c/fields/Apttus_Approval__Date__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Date__c</fullName>
    <label>Date</label>
    <type>DateTime</type>
</CustomField>