force-app/main/default/objects/Apttus_Approval__Approval_Request_History__c/fields/Apttus_Approval__DateApproved__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__DateApproved__c</fullName>
    <description>The date when the approval request was approved</description>
    <label>Date Approved</label>
    <type>DateTime</type>
</CustomField>