force-app/main/default/objects/Apttus_Approval__Approval_Request_History__c/fields/Apttus_Approval__DateAssigned__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__DateAssigned__c</fullName>
    <description>The date when the approval request was assigned</description>
    <label>Date Assigned</label>
    <type>DateTime</type>
</CustomField>