force-app/main/default/objects/Apttus_Approval__Approval_Request_History__c/fields/Apttus_Approval__DelegateApprover__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__DelegateApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Approver who is designated as Delegate for the Request Assignee</description>
    <inlineHelpText>Approver who is designated as Delegate for the Request Assignee</inlineHelpText>
    <label>Delegate Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ApprovalRequestHistoryDelegate</relationshipName>
    <type>Lookup</type>
</CustomField>