force-app/main/default/objects/Apttus_Approval__Approval_Request_History__c/fields/Apttus_Approval__DelegateApproverIds__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__DelegateApproverIds__c</fullName>
    <description>IDs of approvers who were designated as Delegate for the Request Assignee</description>
    <inlineHelpText>IDs of approvers who were designated as Delegate for the Request Assignee</inlineHelpText>
    <label>Delegate Approvers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>