force-app/main/default/objects/Apttus_Approval__Approval_Request_History__c/fields/Apttus_Approval__DelegateApproverNames__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__DelegateApproverNames__c</fullName>
    <description>Names of Delegate Approvers</description>
    <inlineHelpText>Names of Delegate Approvers</inlineHelpText>
    <label>Delegate Approvers (Names)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>