force-app/main/default/objects/Apttus_Approval__Approval_Request_History__c/fields/Apttus_Approval__EscalateToId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__EscalateToId__c</fullName>
    <description>The id of the assignee the request will be escalated to if it is escalated.</description>
    <inlineHelpText>The id of the assignee the request will be escalated to if it is escalated.</inlineHelpText>
    <label>Escalate To Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>