force-app/main/default/objects/Apttus_Approval__Approval_Request_History__c/fields/Apttus_Approval__EscalateToType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__EscalateToType__c</fullName>
    <description>The type of assignee the request will be escalated to if it is escalated.</description>
    <inlineHelpText>The type of assignee the request will be escalated to if it is escalated.</inlineHelpText>
    <label>Escalate To Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Backup Admin User</fullName>
            </value>
            <value>
                <fullName>Queue</fullName>
            </value>
            <value>
                <fullName>Related User</fullName>
            </value>
            <value>
                <fullName>Role</fullName>
            </value>
            <value>
                <fullName>Rule</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>User Approval Matrix Next Approver</fullName>
            </value>
            <value>
                <fullName>User Delegated Approver</fullName>
            </value>
            <value>
                <fullName>User Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>