force-app/main/default/objects/Apttus_Approval__Approval_Request_History__c/fields/Apttus_Approval__ExpectedDaysToComplete__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ExpectedDaysToComplete__c</fullName>
    <description>The number of expected days that this approval request needs to be completed in (approved or rejected).</description>
    <inlineHelpText>The number of expected days that this approval request needs to be completed in (approved or rejected).</inlineHelpText>
    <label>Expected Days To Complete</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>