force-app/main/default/objects/Apttus_Approval__Approval_Request_History__c/fields/Apttus_Approval__Group_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Group_Unique_Id__c</fullName>
    <label>Group Unique Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>