force-app/main/default/objects/Apttus_Approval__Approval_Request_History__c/fields/Apttus_Approval__Initial_Submitter__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Initial_Submitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initial Submitter</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Initial Submitter History</relationshipLabel>
    <relationshipName>Initial_Submitter</relationshipName>
    <type>Lookup</type>
</CustomField>