force-app/main/default/objects/Apttus_Approval__Approval_Request_History__c/fields/Apttus_Approval__Notify_Only__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Notify_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Designates whether the term exception approver receives a notification only for the approval request (when set to true) or gets the request assigned to them and receives notification as well (false, which is the default).</description>
    <inlineHelpText>Designates whether the term exception approver receives a notification only for the approval request (when set to true) or gets the request assigned to them and receives notification as well (false, which is the default).</inlineHelpText>
    <label>Notify Only</label>
    <type>Checkbox</type>
</CustomField>