force-app/main/default/objects/Apttus_Approval__Approval_Request_History__c/fields/Apttus_Approval__Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Object_Type__c</fullName>
    <label>Object Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>