force-app/main/default/objects/Apttus_Approval__Approval_Request_History__c/fields/Apttus_Approval__Parent_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Parent_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the parent agreement associated with the approval request. Only valid for agreement term exception related approval requests.</description>
    <label>Parent Agreement</label>
    <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
    <relationshipLabel>Agreement Term Exception Approval History</relationshipLabel>
    <relationshipName>Parent_Agreement_History</relationshipName>
    <type>Lookup</type>
</CustomField>