force-app/main/default/objects/Apttus_Approval__Approval_Request_History__c/fields/Apttus_Approval__PrevAssignedToId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__PrevAssignedToId__c</fullName>
    <description>The id of the assignee the request was previously assigned to</description>
    <label>Prev Assigned To Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>