force-app/main/default/objects/Apttus_Approval__Approval_Request_History__c/fields/Apttus_Approval__ProcessInstanceId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ProcessInstanceId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the approval process instance associated with the approval request</description>
    <label>Approval Process Instance</label>
    <referenceTo>Apttus_Approval__ApprovalProcessInstance__c</referenceTo>
    <relationshipLabel>Process Instance History</relationshipLabel>
    <relationshipName>ProcessInstanceId</relationshipName>
    <type>Lookup</type>
</CustomField>