force-app/main/default/objects/Apttus_Approval__Approval_Request_History__c/fields/Apttus_Approval__Related_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Related_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Agreement</label>
    <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
    <relationshipLabel>Agreement Approval History</relationshipLabel>
    <relationshipName>Related_Agreement</relationshipName>
    <type>Lookup</type>
</CustomField>