force-app/main/default/objects/Apttus_Approval__Approval_Request_History__c/fields/Apttus_Approval__Related_Agreement_Term_Exception__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Related_Agreement_Term_Exception__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Agreement Term Exception</label>
    <referenceTo>Apttus__Agreement_Term_Exception__c</referenceTo>
    <relationshipLabel>Agreement Term Exception Approval History</relationshipLabel>
    <relationshipName>Related_Agreement_Term_Exception</relationshipName>
    <type>Lookup</type>
</CustomField>