force-app/main/default/objects/Apttus_Approval__Approval_Request_History__c/fields/Apttus_Approval__Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Related_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Approval History</relationshipLabel>
    <relationshipName>Related_Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>