force-app/main/default/objects/Apttus_Approval__Approval_Request_History__c/fields/Apttus_Approval__SequenceString__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__SequenceString__c</fullName>
    <formula>LPAD(Apttus_Approval__Sequence__c, 5, &apos;0&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub-Sequence String</label>
    <type>Text</type>
</CustomField>