force-app/main/default/objects/Apttus_Approval__Approval_Request_History__c/fields/Apttus_Approval__SubmissionComment3__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__SubmissionComment3__c</fullName>
    <label>Submission Comment 3</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>