force-app/main/default/objects/Apttus_Approval__Approval_Request_History__c/fields/Apttus_Approval__SubprocessDependsOn__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__SubprocessDependsOn__c</fullName>
    <description>List of sub processes (belonging to the same step) which must be completed before this sub process. The list contains a comma separated subprocess sequence numbers</description>
    <label>Subprocess Depends On</label>
    <type>TextArea</type>
</CustomField>