force-app/main/default/objects/Apttus_Approval__Approval_Request_History__c/fields/Apttus_Approval__SubprocessSequence__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__SubprocessSequence__c</fullName>
    <description>The subprocess execution sequence</description>
    <label>Subprocess Sequence</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>