force-app/main/default/objects/Apttus_Approval__Approval_Request_History__c/fields/Apttus_Approval__SubstepName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__SubstepName__c</fullName>
    <description>The name of the substep associated with the subprocess.</description>
    <inlineHelpText>The name of the substep associated with the subprocess.</inlineHelpText>
    <label>Substep Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>