force-app/main/default/objects/Apttus_Approval__Approval_Request_History__c/fields/Apttus_Approval__Workflow_Trigger_Added_Comments__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Workflow_Trigger_Added_Comments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag that gets set by the ApprovalAction visualforce page when comments are added to an approval request without actually approving or rejecting the request. This flag then becomes the trigger for workflow rules that get fired to send a notification to parties that comments have been entered for the request.</description>
    <label>Workflow Trigger Added Comments</label>
    <type>Checkbox</type>
</CustomField>