force-app/main/default/objects/Apttus_Approval__Approval_Request_History__c/fields/Apttus_CQApprov__CartLineItemId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CQApprov__CartLineItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated cart line item</description>
    <label>Related Cart Line Item</label>
    <referenceTo>Apttus_Config2__LineItem__c</referenceTo>
    <relationshipLabel>Approval Request History</relationshipLabel>
    <relationshipName>Approval_Request_History</relationshipName>
    <type>Lookup</type>
</CustomField>