force-app/main/default/objects/Apttus_Approval__Approval_Request_History__c/fields/Apttus_QPApprov__ProposalId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPApprov__ProposalId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated quote/proposal</description>
    <label>Related Quote/ProposalQuote/Proposal</label>
    <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
    <relationshipLabel>Approval Request History</relationshipLabel>
    <relationshipName>ApprovalRequestHistory</relationshipName>
    <type>Lookup</type>
</CustomField>