force-app/main/default/objects/Apttus_Approval__Approval_Request_History__c/fields/Apttus_QPApprov__ProposalLineItemId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPApprov__ProposalLineItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated quote/proposal line item</description>
    <label>Related Quote/ProposalProposal Line Item</label>
    <referenceTo>Apttus_Proposal__Proposal_Line_Item__c</referenceTo>
    <relationshipLabel>Approval Request History</relationshipLabel>
    <relationshipName>ApprovalRequestHistory</relationshipName>
    <type>Lookup</type>
</CustomField>